# Fake-Shell

./: .my_env  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cat  cat.cpp  cmake_install.cmake  cp.cpp  ln.cpp  ls  ls.cpp  main  main.cpp  mkdir.cpp  mv.cpp  rm.cpp  shell  shell.cpp  shell.h  tools.cpp  touch.cpp  xargs.cpp
include/: shell.h  tools.h
src/: shell.cpp  tools.cpp
